--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="cache-control" content="no-cache">
@@ -20,10 +20,10 @@
   <div id="app">
   </div>
   <script src="//reach-life.com/dooolyConfig.js"></script>
-  <script src="./static/js/ua-parser.min.js"></script>
-  <script src="./static/js/isWeiXin.js"></script>
-  <script src="./static/js/dooolyAPP.20190416.js"></script>
-  <script src="//res.wx.qq.com/open/js/jweixin-1.0.0.js" async></script>
+  <script src="./static/ua-parser.min.js"></script>
+  <script src="./static/isWeiXin.js"></script>
+  <script src="./static/dooolyAPP.20190416.js"></script>
+  <script src="//res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   <script>
     var _hmt = _hmt || [];
     var secretKey = '5ddfc967a5eaf4d32a89559e293bb979';
@@ -45,5 +45,4 @@
     })();
   </script>
 </body>
-
 </html>
