--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
 <body>
   <div id="app">
   </div>
-  <!-- <script type="text/javascript" src="https://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
+  <script type="text/javascript" src="https://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
   <script>
     var vConsole = new VConsole();
-  </script> -->
+  </script>
   <script src="//reach-life.com/dooolyConfig.js"></script>
   <script src="<%= htmlWebpackPlugin.options.publicPath %>static/ua-parser.min.js"></script>
   <script src="<%= htmlWebpackPlugin.options.publicPath %>static/globalProperties.js"></script>
